text align fixed

--- a/css/main.css
+++ b/css/main.css
@@ -402,7 +402,7 @@ nav {
   }
   .content h1 {
     display: flex;
-    align-items: center;
+    text-align: left;
     justify-content: left;
     /* margin-left: 5rem; */
     font-family: var(--headingFont);
